developerProject/force-app/main/default/objects/OJ_PM__Application_Log__c/OJ_PM__Application_Log__c.object-meta.xml
<CustomObject>
    <description>Holds custom debug and exception messages from the application</description>
    <label>Application Log</label>
    <nameField>
        <displayFormat>Log-{0000}</displayFormat>
        <label>Application Log #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>