developerProject/force-app/main/default/objects/OJ_PM__Application_Log__c/fields/OJ_PM__Debug_Level__c.field-meta.xml
<CustomField>
    <fullName>OJ_PM__Debug_Level__c</fullName>
    <label>Debug Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Debug</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>