developerProject/force-app/main/default/objects/OJ_PM__Application_Log__c/fields/OJ_PM__Reference_Id__c.field-meta.xml
<CustomField>
    <fullName>OJ_PM__Reference_Id__c</fullName>
    <label>Reference Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>