developerProject/force-app/main/default/objects/OJ_PM__Application_Log__c/fields/OJ_PM__Reference_Information__c.field-meta.xml
<CustomField>
    <fullName>OJ_PM__Reference_Information__c</fullName>
    <label>Reference Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>