developerProject/force-app/main/default/objects/OJ_PM__Application_Log__c/fields/OJ_PM__Source__c.field-meta.xml
<CustomField>
    <fullName>OJ_PM__Source__c</fullName>
    <label>Source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>