developerProject/force-app/main/default/objects/OJ_PM__Application_Log__c/fields/OJ_PM__Source_Function__c.field-meta.xml
<CustomField>
    <fullName>OJ_PM__Source_Function__c</fullName>
    <label>Source Function</label>
    <length>150</length>
    <type>Text</type>
</CustomField>