developerProject/force-app/main/default/objects/OJ_PM__Application_Log__c/fields/OJ_PM__Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>OJ_PM__Stack_Trace__c</fullName>
    <label>Stack Trace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>