developerProject/force-app/main/default/objects/OJ_PM__Application_Log__c/fields/OJ_PM__XML_Payload__c.field-meta.xml
<CustomField>
    <fullName>OJ_PM__XML_Payload__c</fullName>
    <label>XML Payload</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>